Closed Bug 1922961 Opened 1 year ago Closed 1 year ago

Windows Settings: "Notification & actions" (Manage notifications) don't show TB icon

Categories

(Thunderbird :: OS Integration, defect)

Thunderbird 128
defect

Tracking

(thunderbird_esr128 fixed, thunderbird132 fixed)

RESOLVED FIXED
133 Branch
Tracking Status
thunderbird_esr128 --- fixed
thunderbird132 --- fixed

People

(Reporter: betterbird.project+18, Assigned: Paenglab)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Keywords: regression
Regressed by: 1838139
Assignee: nobody → richard.marti
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Duplicate of this bug: 1907707
Target Milestone: --- → 133 Branch

When I have time. Over this weekend.

Pushed by geoff@darktrojan.net:
https://hg.mozilla.org/comm-central/rev/99c72151ec3c
Fix the path to the toast icon in installer. r=rjl

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

Comment on attachment 9429229 [details]
Bug 1922961 - Fix the path to the toast icon in installer. r=rjl

[Approval Request Comment]
Regression caused by (bug #): bug 1838139
User impact if declined: toast notification shows no TB icon
Testing completed (on c-c, etc.): on c-c
Risk to taking this patch (and alternatives if risky): low

Attachment #9429229 - Flags: approval-comm-esr128?
Attachment #9429229 - Flags: approval-comm-beta?

Comment on attachment 9429229 [details]
Bug 1922961 - Fix the path to the toast icon in installer. r=rjl

[Triage Comment]
Approved for beta

Attachment #9429229 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9429229 [details]
Bug 1922961 - Fix the path to the toast icon in installer. r=rjl

[Triage Comment]
Richard, are both patches needed in order to fix this?

Attachment #9429229 - Flags: approval-comm-esr128? → approval-comm-esr128+

Rob is going to revert this in Thunderbird 132.0b5. And we'll hold off until the m-c fix is in mozilla-beta.

Flags: needinfo?(rob)
Attachment #9429229 - Flags: approval-comm-esr128?
Attachment #9429229 - Flags: approval-comm-esr128+
Attachment #9429229 - Flags: approval-comm-beta?
Attachment #9429229 - Flags: approval-comm-beta+

There is no need. The parts are independent, the Mozilla change is for a different registry entry added at runtime. For as much as we can tell, the C-C part already fixes the missing icon. Does it not?

(In reply to Corey Bryant from comment #10)

[Triage Comment]
Richard, are both patches needed in order to fix this?

The C-C patch can still land as there is an error in path in installer that prohibits to get the correct icon.

Comment on attachment 9429229 [details]
Bug 1922961 - Fix the path to the toast icon in installer. r=rjl

[Triage Comment]
(re)Approved for beta (already landed)

Attachment #9429229 - Flags: approval-comm-beta? → approval-comm-beta+
Flags: needinfo?(rob)

Comment on attachment 9429229 [details]
Bug 1922961 - Fix the path to the toast icon in installer. r=rjl

[Triage Comment]
Approved for esr128

Attachment #9429229 - Flags: approval-comm-esr128? → approval-comm-esr128+

Reopened for M-C part.

Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Pushed by mkmelin@iki.fi: https://hg.mozilla.org/integration/autoland/rev/cc6ed6497320 Don't append the browser subdirectory in Thunderbird. r=win-reviewers,handyman
Status: REOPENED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED

Comment on attachment 9430554 [details]
Bug 1922961 - Don't append the browser subdirectory in Thunderbird. r=#win-reviewers

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Thunderbirds releases are based on ESR.
  • User impact if declined: On Thunderbird the toast notifications are missing the icon because the path goes to browser/ which is for Firefox only.
  • Fix Landed on Version: 133
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Simple preprocessor rule to include the code for Firefox only.
Attachment #9430554 - Flags: approval-mozilla-esr128?

Comment on attachment 9430554 [details]
Bug 1922961 - Don't append the browser subdirectory in Thunderbird. r=#win-reviewers

Approved for 128.5esr.

Attachment #9430554 - Flags: approval-mozilla-esr128? → approval-mozilla-esr128+

Hello,

Are there any specific STR that QA could perform in order to reproduce the faulty behaviour(crash) on an affected build and properly verify and confirm that it is fixed?

Comment on attachment 9430554 [details]
Bug 1922961 - Don't append the browser subdirectory in Thunderbird. r=#win-reviewers

Clearing the ESR128 approval to get it off the needs-uplift radar.

Attachment #9430554 - Flags: approval-mozilla-esr128+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: