Bug 1922961 - Don't append the browser subdirectory in Thunderbird. r=win-reviewers,handyman, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D225443